MTX-511
Add tags filtering to connector listing in the CLI

* Refactor  unit test